<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:text="Select The Orientation of list"
    android:textColor="#000"
    android:id="@+id/label"
    android:textSize="16sp"
    android:layout_margin="10dp"
    />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/label"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:id="@+id/radio_grp"
        app:layout_constraintLeft_toLeftOf="parent"

        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vertical_list"
            android:textColor="#000000"
            android:id="@+id/radio1"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:id="@+id/radio2"
            android:text="@string/horizontal_list"/>


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:id="@+id/radio3"
            android:text="@string/grid_list"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stagerred_list"
            android:textColor="#000000"
            android:id="@+id/radio4"/>
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/radio_grp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="Select The Orientation of list"
        android:textColor="#000"
        android:id="@+id/label2"
android:layout_margin="10sp"
        android:textSize="16sp"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label2" />
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#70000000"
        android:visibility="gone"
        android:id="@+id/view_back"
        />
    <ImageView
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:scaleType="centerCrop"
        android:visibility="gone"
        android:id="@+id/zoomedImage"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
       />

</androidx.constraintlayout.widget.ConstraintLayout>